Wrote some eval

--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -80,7 +80,7 @@
 	\singlespacing
 	\tableofcontents{}
 	\doublespacing
-	
+
 	\newpage
 
 \chapter{Introduction}
@@ -602,14 +602,24 @@
 
 	%Physics will also need to be provided by the engine to allow for much improved performance over having physics implemented in Lua.
 
-    %Both the physics and rendering capabilities of the game engine will need to be fully accessed through the provided Lua API. The Lua API should be consistent and easy to use, matching, where possible, the Lua style completely.
-
-    Discuss completion of objectives
-	refer back to objectives and explain how well they were accomplished
+	%Both the physics and rendering capabilities of the game engine will need to be fully accessed through the provided Lua API. The Lua API should be consistent and easy to use, matching, where possible, the Lua style completely.
 	
-	talk about feedback from Jim / Henry
+	All work completed on the project has been towards achieving the objectives.
 
+    %Discuss completion of objectives
+	%refer back to objectives and explain how well they were accomplished
+	
+	%talk about feedback from Jim / Henry / Roman
 
+	For the gamejam a range of participants were found with a wide range of skill, starting from first year computer science students to passionate hobbyist turned professional. This was done in order to get different perspectives on the game engine. A series of questions were asked after using the engine in order to ascertain their opinions.
+
+	Starting from the least experienced and moving towards the most experienced the results of the questionnaires will be analysed. The questionnaires can be found in the appendix of this report.
+
+	First is a Dutch first year computer science student. Overall very positive feedback across the board. They enjoyed using the engine and found it to be very easy to pick up and create with, they would also choose to use this engine if they had a game idea they would like to prototype.
+
+	Next is an English engineer graduate with no education or professional experience in programming for games or otherwise, managed to produce a simple zombie survival game within a few hours of starting
+
+	Finally a Dutch professional developer with years of experience developing in Lua for various games. Produced an excellent showcase of the engine utilising many of the major features of the engine with no prompts other than the use of the examples and Lua binding source code.
 
 
 
